--- a/pixi.toml
+++ b/pixi.toml
@@ -13,12 +13,10 @@ lint = "pre-commit run --all-files"
 
 [dependencies]
 python = ">=3.10"
-fastapi = ">=0.104.0"
-uvicorn = ">=0.23.2"
 pydantic = ">=2.4.2"
 pydantic-settings = ">=2.0.0"
-python-dotenv = ">=1.0.0"
-loguru = ">=0.7.2"
 pytest = ">=7.4.2"
 ruff = ">=0.0.292"
 pre-commit = ">=3.5.0"
+mcp = ">=1.8.1,<2"
+polars = ">=1.29.0,<2"
